@@ -1,8 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST scala-1.2.0.1.tar.bz2 4548508 SHA256 975d6e10febf5d52a3f2d826afa7f98ddbec0a6f05eaf6c30a3f27a472ca84b9 SHA512 8fd4958e1603b576cb73f7372a88a7b06c1432e4f8a0fa6a987aa4397343c6d859ddda9972af039e0b4b1ea722dbbbfd4df03fe2edf9cc54bbc72e5cebbf200b WHIRLPOOL dfa5d71b39ffa1012d66ac8bcc281562182af13ec642fceee2e1fb7f3228a303a198a401e0578e3aad7d7608a26ae6e11978042fd488b4503ffb144e5d2efa44
 DIST scala-2.11.4.tgz 26509669 SHA256 000f5a19de78049bc06e33ee98063c7ad3cfd51212df92a8a164af89aeef8084 SHA512 f963279cba5d2f4d41d195f80dad32bf529bc5f2c3d306ce6c1b9fbb6d4977a481796d98c3d1758f3987824880ab0925ac72e3a70e4165faf7c7985e64cece28 WHIRLPOOL a76a97854e0d4ac9f2f555ab3b5196d473e8723c88926163f88c891ac31cacb7d97acadf437aee101b2d9db0fc0295f4b3fc95c5db6bc16de8e6ff54b1a2ecda
 DIST scala-2.11.5.tgz 27135212 SHA256 6d593ce6df0e4f2e90ae423f2d40b915cd9be2bd41708b7fc1df56ebbdf0893c SHA512 c906cb1e42a62fc271674cb95b3eacd968dd579dfd43a1adaae8a102b4069096907af4798a6a002dfec796905e3cff05d58116013c8e45a7277879935c39d3d3 WHIRLPOOL d05fd600bf5c24a856f75ca245338d97da642dd7d68033bf21364aa9ba82aa79c00b37a1a8721cd761126e011556ef52ad06a370d680b04aa5391488e695f739
 EBUILD scala-bin-1.2.0.1.ebuild 1460 SHA256 c8e4b2b860b5bc8f64c4e88063719862900914eba80f6e19f28deaab5db64029 SHA512 bfbd26744bdf89b3388dffd690f97148f7b9a46bb68733577419a83c81bcab79423e45ebcbbd9988d1b66d95dd50f92e04841e2a6cbbd2bc6770799ba76cea7d WHIRLPOOL 117d23760fd46c6ebdd66a0b937fa48020754d86220d79d0ea2ae98c48e131500a4f5ff3236f96df5401591bece3ba72bfe7ae8dbf4b3566102170be3231a0a0
-EBUILD scala-bin-2.11.4.ebuild 1917 SHA256 ccdb99e8194aab6fb9f82e0202f502d13ecf5b66a70e7bb7e91e6e0434b15a60 SHA512 181cf46df338f9b48ba192d49a284481497bce7d93ca4c22e3183c65db4ce37133f7eab652604dabe10bcf5bfc0a3bcc024b4e0271881580691c3aba97248a9e WHIRLPOOL c63355f85afe4b3548e3254c5713b3ff502e938acb17527ad95632d2a841dfd18e926aed94a3353637095cc6aff53437ddb6b1c0a8de065fcd9508ab341ea977
-EBUILD scala-bin-2.11.5.ebuild 1917 SHA256 731d98ebdf8face12c9e2340338a9af38561d381fa242b2e0a3bbc4c29ac6173 SHA512 c6e0a9b34fb861576f02bc4bc9136f4ed0de1a43b5e970571c2af5a3d138b8f7c7ed5b31d31d290f3a5e2d16c6c72ef814dbd29daf13766f6326e9e8f842cc45 WHIRLPOOL c55ad531a3abef2c5c5f81271ddfd8fc1e1dcc1e23f1766a031b5bdd59c34a0bd655919b923cc657e315d6599d382d23b80eacadcf56c757445723ce2c47f31b
-MISC ChangeLog 2712 SHA256 7fcf7b72adc7eb3e65542d2a46f5d3aa83bcd831904884cf5c3f289a1a19b5e6 SHA512 8f0e73390d72f145b54f4a11e0e69838615336297a7d6d12e38af0844df5799086af05403830fb21567a0904d36b11de9369baf20de1624ca7cea9dd9caa0b36 WHIRLPOOL 0561195f664760580e7f075f7304880fa870cec0124335ed29ce9b0528c79a0257a4b03ebbe69fc918a2098fb92df94b792ea9ebf86741ec462ecebf289996db
+EBUILD scala-bin-2.11.4.ebuild 1912 SHA256 b9fb23a0fcd8f6cf01510ea9d795e899bea250c428bc48e69268c1ed6120b432 SHA512 e0ab52c2f8cffbb012c2b8246a49f939e4bf26be7bc1f116462d802ec8d6f46f7962124461ae9c5e5c1875bb6d4174d0b4f6e30c22376c3b699332647157d86a WHIRLPOOL 48b0074a6d120ff792e23e891530e411f00da93154cd66d0bb2fb50c4aff39e53813a64f3661a09ddb9cf28e0ab2ae7e94735854769d956926f7ebd58f193663
+EBUILD scala-bin-2.11.5.ebuild 1911 SHA256 07c41cf4add19c6d0941d73bbfab4a735a8f4ff20ca23fcb7ec3f5c4ec67a0ab SHA512 c6b7d278cdfc1c0e32f0e97dbab536536be4f5031c431cb10296bd22a6ca3ea1493999f5ee63844efce3becbbfdd391290d4e1a3cd26d9bdb4f453ceea2ca554 WHIRLPOOL 3e3e9f32ad42902c50712563acfc5f9197e40e0a9ef60bea485feee2dcee3612711f8d8ee8ffe6ee61acaa47355ee629ba3e8cc102e1b9567d474f7ad6f9899e
+MISC ChangeLog 2912 SHA256 7b223afac7d42db65df240f96a066fe2bd7a99f01d16a27d22a3a099418af474 SHA512 d4e80872d4e2c52f661db6d779d7ed87d1b2bca359944d86abcb6bd8ae41a1c2d5ee10ea9f2d91f466401a37d3c637e513cc46ac7d36609c63dcd394de5fbebb WHIRLPOOL 310da864066db9668dc6606e45a2c896efb4f00b114bdee127a5eb69a5871f93f4aa132098d1206579df9960ff792d1df7b8c08996a4d0e7d4242956e22c70f0
 MISC metadata.xml 159 SHA256 da2aaa3223c5418688dfbba6f899648c5bcb2e4610126519a1a862913c4f8fa6 SHA512 f5bc77a4e168cdb5a9f9c347f6f437b16bd28978351ec692d4f7e406ba93479424e2272de70fe85d2e0668172de8ccd3aa096f49d5912ed91d17bea11756865b WHIRLPOOL b0cba2d5917cc20d7409ccfedc345ab38c71df76c5c030df578d6db718f8a60dcfc1927c20e7062fafc62e955a90ec9f21cdcef6d7a566fddf374ce766ca64cc
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJVDYoeXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirwekP/jLck6rxNq89+m1RoJfb+lq9
+KkWMCJwe2ZPvH1DKU2+Z8HLouk4Dlu7Pmz6W86eEi90ISL+uhccoiHZHadsuZaxd
+okcs3SoI1j6qNJri3DpYCfAnxXRzg55r/NVagKY933es379rCoZHdajjTisZgHA8
+NSQHVHebFG8dX6OXwdgKC2+8FkCiXQgeV3OoDLfuXIqpbmPSgrkfICnTa/jFbP+Q
+BwsYfnWUfBfrPdEHWirIyB/gtfz/tTYt7ASUF9BR8N3mnjVjHCySm80UmGlJ/h/F
+8DCNhREcnCH/t+AqEMEz5gmRaMQnBd4m6uCiGU59JHIRhBHP+xlKbsEkP/RdUPfX
+4m7z474c3F2TaORkziBqcW4NOyHQqD0O/bG4TbKU3ZEtFoXMo23ofadzs6tEUSBL
+xpi4hhPNga7YTClGtTPJRXRczEBhvHEo7jtoaTRMgId/N6W2ccSdsr7UrU5Nu2Jm
+u59nKchv6+5VXPmJOv1unA6pafKWfckpsfnEWRfLNeUU2aPyqK8t7rQmQq8+UBXY
+frTzdhK0VwuRUKTLPBj7Rrx1Si+S6lcvq52Ja/y95tD7OqPFScWKQLXBtjawLrN5
+f+qRlHAs2Rrtt7vuhmb0ImqUTx+UyyGqcxlj2jOwSGRB+urmcA4wO4/IDNW3RWMT
+qs1dRS0HO95kvFNHsSgZ
+=dleZ
+-----END PGP SIGNATURE-----
